Added basic person name generator, nothing complex, just a list of names for now

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <ul>
         <li id="shopName"></li>
         <li id="shopCategory"></li>
+        <li id="shopOwner"></li>
       </ul>
     </div>
     <script>
@@ -19,6 +20,7 @@
         var shop = Dungeonator.CreateShop();
         $("#shopName").html(shop.shopName);
         $("#shopCategory").html(shop.shopCategory);
+        $("#shopOwner").html(shop.shopOwner);
       });
 
     </script>
